{
    "name": "MainInput",
    "maps": [
        {
            "name": "Main",
            "id": "680562f0-db25-4b99-b0f4-61b3f7c469e3",
            "actions": [
                {
                    "name": "NextCard",
                    "type": "Button",
                    "id": "e22bc65b-5c5d-4c9d-9736-dbc08918aa71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6e0cb8b0-0646-445c-8a5a-f63c105414d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67eb9524-c46e-4c34-81fb-799777f2f397",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "NextCard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae941710-e8d0-4109-b902-77eeda8d74d0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}